@@ -4,6 +4,10 @@ CHANGE LOG
 
 2008-12-07 Warren L. DeLano <warren@delsci.com>
 
+	* fixed split_states behavior to allow prefix to override titles
+	
+2008-12-07 Warren L. DeLano <warren@delsci.com>
+
 	* updated pymol/__init__.py OpenGL autoconfiguration
 	
 2008-12-04 Warren L. DeLano <warren@delsci.com>
